# CMakeStarter

./: CMakeLists.txt  README.md
cmake/: commands.cmake  logging.cmake
cmake_test/: CMakeLists.txt  cmake_test_obj.cc  cmake_test_obj.h  main.cc
codelab/: CMakeLists.txt
codelab/gtest/: CMakeLists.txt  codelab_gtest_test.cc
codelab/protobuf/: CMakeLists.txt  main.cc  simple.proto  test.proto
codelab/testing/: CMakeLists.txt
codelab/trimesh2/: CMakeLists.txt  mesh_make.cc
